--- a/hackathons/fuseLearn/calculator/calculator.css
+++ b/hackathons/fuseLearn/calculator/calculator.css
@@ -17,6 +17,9 @@ body {
 }
 
 p {
+  color: white;
+  margin: 0;
+  text-align: center;
   font-family: Helvetica;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
@@ -31,37 +34,27 @@ img.bgIMG {
 }
 
 img.back {
+  width: 3.5vw;
+  height: 3.5vw;
   position: absolute;
   top: 20px;
   left: 20px;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
   z-index: 4;
+  cursor: pointer;
+  animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 div.blurBox {
   display: flex;
   flex-direction: column;
-  background-color: rgba(255, 0, 0, 0);
-  backdrop-filter: blur(30px);
   align-items: center;
   justify-content: center;
-  z-index: 3;
   position: relative;
-  height: 100%;
   width: 100%;
-}
-
-.title {
-  color: white;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  text-align: center;
-  font-family: Helvetica;
-  font-weight: bold;
-  font-size: 55px;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0);
+  backdrop-filter: blur(30px);
+  z-index: 3;
 }
 
 div.textbox,
@@ -69,45 +62,45 @@ div.miniTextbox {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: Helvetica;
-  font-size: 50px;
-  height: 100px;
-  min-width: 320px;
-  flex-grow: 1;
+  width: 19vw;
+  height: 9vh;
+  margin-bottom: 10px;
   border: none;
-  outline: none;
-  color: white;
-  background: var(--darkBG);
   border-radius: 30px;
-  box-sizing: border-box;
-  overflow: hidden;
+  font-family: Helvetica;
+  font-size: calc(1vw + 1.5vh);
+  background-color: var(--darkBG);
+  color: white;
+  overflow-y: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  margin-bottom: 10px;
+  box-sizing: border-box;
+  outline: none;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 div.miniTextbox {
+  width: 28vw;
+  height: 5vh;
   font-size: 30px;
-  height: 50px;
-  min-width: 475px;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 button {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--darkBG);
-  color: white;
-  border: 0;
-  width: 150px;
-  height: 100px;
+  width: 9vw;
+  height: 9vh;
+  margin: 0;
+  padding: 0;
+  border: none;
   border-radius: 30px;
   font-family: Helvetica;
-  font-size: 30px;
-  transition-duration: 0.4s;
+  font-size: calc(1vw + 1.5vh);
+  background-color: var(--darkBG);
+  color: white;
   cursor: pointer;
+  transition-duration: 0.4s;
   z-index: 4;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
@@ -121,13 +114,22 @@ button:hover {
 
 button.special {
   background-color: var(--vibrantBlueBG);
-  color: white;
 }
 
 button.special:hover {
   background-color: var(--turquoiseBG);
   box-shadow: 0 0 10px var(--turquoiseBG);
-  transform: perspective(200px) rotateY(5deg) rotateX(5deg);
+}
+
+.title {
+  color: white;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  text-align: center;
+  font-family: Helvetica;
+  font-weight: bold;
+  font-size: calc(2vw + 3vh);
+  animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 div.horizontalLayout {
@@ -135,9 +137,9 @@ div.horizontalLayout {
   justify-content: space-evenly;
   column-gap: 10px;
   align-items: center;
+  margin: 5px;
   width: auto;
   height: auto;
-  margin: 5px;
 }
 
 div.horizontalCenter {
@@ -146,19 +148,20 @@ div.horizontalCenter {
 }
 
 .historyList {
-  background-color: var(--darkBG);
-  border-radius: 30px;
-  height: 595px;
-  overflow-y: auto;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  max-width: 600px;
+  height: 56vh;
   padding: 0;
+  border-radius: 30px;
+  background-color: var(--darkBG);
   text-align: center;
+  overflow-y: auto;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 .historyList ol {
-  width: 460px;
+  width: 27vw;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -167,10 +170,10 @@ div.horizontalCenter {
 
 ol li {
   color: white;
+  margin: 20px;
+  list-style: none;
   font-family: Helvetica;
   font-size: 40px;
-  margin: 20px;
-  list-style-type: none;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
@@ -204,5 +207,4 @@ ol li {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--vibrantBlueBG);
-  border-radius: 30px;
 }
