--- a/hackathons/fuseLearn/notepad/notepad.css
+++ b/hackathons/fuseLearn/notepad/notepad.css
@@ -16,6 +16,9 @@ body {
 }
 
 p {
+  color: white;
+  margin: 0;
+  text-align: center;
   font-family: Helvetica;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
@@ -30,46 +33,44 @@ p {
 }
 
 .back {
+  width: 50px;
+  height: 50px;
   position: absolute;
   top: 20px;
   left: 20px;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
   z-index: 4;
+  cursor: pointer;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 .blurBox {
   display: flex;
   flex-direction: column;
-  background-color: rgba(255, 0, 0, 0);
-  backdrop-filter: blur(30px);
   align-items: center;
   justify-content: center;
-  z-index: 3;
   position: relative;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0);
+  backdrop-filter: blur(30px);
+  z-index: 3;
 }
 
 button.textOnly {
   display: flex;
   align-items: center;
-  align-self: center;
-  text-align: center;
   justify-content: center;
-  background-color: transparent;
-  border: 0;
-  position: relative;
-  color: white;
-  margin: 0;
   width: 130px;
   height: 50px;
+  margin: 0;
+  padding: 0;
+  border: none;
   border-radius: 30px;
   font-family: Helvetica;
   font-weight: bold;
   font-size: 20px;
+  background-color: transparent;
+  color: white;
   cursor: pointer;
 }
 
@@ -79,8 +80,7 @@ button.textOnly:hover {
 
 .title {
   color: white;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin: 60px 0;
   text-align: center;
   font-family: Helvetica;
   font-weight: bold;
@@ -94,60 +94,55 @@ button.textOnly:hover {
 }
 
 .horizontalLayout {
-  position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   align-self: center;
   align-content: center;
-
+  position: relative;
   width: auto;
   height: auto;
   margin: 100px;
 }
 
 .verticalLayout {
-  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   align-self: center;
   align-content: center;
-
+  position: relative;
   width: auto;
   height: 100%;
   margin: 100px;
 }
 
 .textbox {
-  font-family: Helvetica;
-  font-size: 25px;
   width: 80vw;
   height: 60vh;
-  overflow-y: auto;
+  padding: 15px 15px 35px 15px;
   border: none;
-  outline: none;
-  padding: 15px;
-  padding-bottom: 35px;
+  border-radius: 30px 30px 0 0;
+  font-family: Helvetica;
+  font-size: 25px;
+  background-color: var(--darkBG);
   color: white;
-  background: var(--darkBG);
-  border-radius: 30px 30px 0px 0px;
+  overflow-y: auto;
+  outline: none;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 .detailPane {
-  width: 80vw;
-  border-top: solid;
-  padding-left: 15px;
-  padding-right: 15px;
-  color: white;
-  background: var(--darkBG);
-  border-radius: 0px 0px 30px 30px;
-
-  position: relative;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  width: 80vw;
+  padding: 0 15px;
+  border-top: solid;
+  border-radius: 0 0 30px 30px;
+  background-color: var(--darkBG);
+  color: white;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
@@ -181,5 +176,4 @@ button.textOnly:hover {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--vibrantBlueBG);
-  border-radius: 30px;
 }
