--- a/hackathons/fuseLearn/tasks/tasks.css
+++ b/hackathons/fuseLearn/tasks/tasks.css
@@ -20,11 +20,14 @@ body {
 }
 
 p {
+  color: white;
+  margin: 0;
+  text-align: center;
   font-family: Helvetica;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.bgIMG {
+img.bgIMG {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -33,48 +36,53 @@ p {
   z-index: 1;
 }
 
-.back {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
-  z-index: 4;
+img.info {
+  width: 6vw;
+  height: 6vw;
+  margin-bottom: 20px;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.blurBox {
+img.back {
+  width: 3.5vw;
+  height: 3.5vw;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 4;
+  cursor: pointer;
+  animation: riseLoad 1s ease 0s 1 normal backwards;
+}
+
+div.blurBox {
   display: flex;
   flex-direction: column;
-  background-color: rgba(255, 0, 0, 0);
-  backdrop-filter: blur(30px);
   align-items: center;
   justify-content: center;
-  z-index: 3;
   position: relative;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0);
+  backdrop-filter: blur(30px);
+  z-index: 3;
 }
 
 button {
   display: flex;
   align-items: center;
-  align-self: center;
-  text-align: center;
   justify-content: center;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-  border: 0;
-  position: relative;
-  padding: 2px 2px;
+  width: 8vw;
+  height: 6vh;
   margin: 0;
-  width: 130px;
-  height: 50px;
+  padding: 2px;
+  border: none;
   border-radius: 30px;
   font-family: Helvetica;
-  font-size: 20px;
-  transition-duration: 0.4s;
+  font-size: calc(0.625vw + 1.1vh);
+  background-color: var(--darkBG);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  transition-duration: 0.4s;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
@@ -118,90 +126,89 @@ button.empty:hover {
 .title {
   color: white;
   margin-top: 60px;
-  margin-bottom: 60px;
   text-align: center;
   font-family: Helvetica;
   font-weight: bold;
-  font-size: 55px;
+  font-size: calc(2vw + 3vh);
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 .subTitle {
   color: white;
-  margin-top: 60px;
   margin-bottom: 60px;
   text-align: center;
   font-family: Helvetica;
-  font-size: 20px;
+  font-size: calc(0.625vw + 1.1vh);
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.horizontalLayout {
-  position: relative;
+div.horizontalLayout {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   align-self: center;
   align-content: center;
-
+  position: relative;
   width: auto;
   height: auto;
   margin: 0;
 }
 
 input {
-  background-color: var(--darkBG);
-  color: white;
-  width: calc(100vw - 900px);
-  height: 50px;
+  width: calc(25vw - 30px);
+  height: 6vh;
+  margin-bottom: 30px;
+  padding: 0 20px;
+  text-align: center;
+  border: none;
   border-radius: 40px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  background-color: var(--darkBG);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  font-family: Helvetica;
   font-size: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-bottom: 10px;
+  color: white;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
 ol {
-  background-color: var(--darkBG);
-  width: calc(100vw - 900px);
-  height: 595px;
+  width: 50vw;
+  height: 45vh;
+  padding: 20px 5px 5px 40px;
   border-radius: 30px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  background-color: var(--darkBG);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  overflow-x: hidden;
   overflow-y: auto;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-left: auto;
-  margin-right: auto;
   animation: riseLoad 1s ease 0s 1 normal backwards;
+  list-style-type: decimal;
 }
 
 ol li {
   color: white;
+  padding: 5px;
   font-family: Helvetica;
   font-size: 20px;
-  padding: 5px;
-  margin-left: 35px;
   animation: riseLoad 1s ease 0s 1 normal backwards;
+  list-style: decimal inside;
 }
 
-.todo-wrapper ol li {
-  margin: 5px 0;
-  padding: 3px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
-}
-
-.todo-wrapper .completed {
+.completed {
   text-decoration: line-through;
   color: gray;
   animation: riseLoad 1s ease 0s 1 normal backwards;
+}
+
+div.info {
+  width: 50vw;
+  height: 45vh;
+  padding: 20px 0 5px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: fixed;
+  top: calc(56vh + 30px);
 }
 
 @keyframes riseLoad {
@@ -234,5 +241,4 @@ ol li {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--vibrantBlueBG);
-  border-radius: 30px;
 }
