--- a/home.css
+++ b/home.css
@@ -4,23 +4,24 @@
 
 @font-face {
   font-family: Poppins;
-  src: url("../fonts/Poppins-Regular.ttf");
+  src: url("/fonts/Poppins-Regular.ttf");
 }
 
 @font-face {
   font-family: DMSerifDisplay;
-  src: url("../fonts/DMSerifDisplay-Regular.ttf");
+  src: url("fonts/DMSerifDisplay-Regular.ttf");
 }
 
 body {
   display: flex;
+  background-color: black;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  background-image: url("../images/bg.jpg");
+  background-image: url("images/bg.jpg");
 }
 
 div.blurBox {
@@ -34,7 +35,6 @@ div.blurBox {
   backdrop-filter: blur(30px);
   border-radius: 40px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  animation: blurLoad 1s ease 0s 1 normal backwards;
 }
 
 .mainTitle {
@@ -80,12 +80,6 @@ div.horizontalLayout {
   from {
     opacity: 0;
     transform: translateY(50px);
-  }
-}
-
-@keyframes blurLoad {
-  from {
-    filter: sepia(5%) blur(100px);
   }
 }
 
