--- a/projects.css
+++ b/projects.css
@@ -34,10 +34,9 @@ div.blurBox {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 98vw;
+  width: 99vw;
   min-height: 98vh;
   margin-top: auto;
-  padding: 40px 0 40px 0;
   background-color: rgba(255, 0, 0, 0);
   backdrop-filter: blur(30px);
   border-radius: 40px;
@@ -50,8 +49,9 @@ div.mainTitle {
   text-align: center;
   font-family: DMSerifDisplay;
   font-size: calc(2vh + 2vw);
+  margin-top: 20px;
   transition: 0.3s;
-  animation: riseLoad 4s ease 0s 1 normal backwards;
+  animation: riseLoad 1.7s ease 0s 1 normal backwards;
 }
 
 div.mainTitle:hover {
@@ -66,7 +66,7 @@ div.bullet {
   text-align: center;
   font-family: DMSerifDisplay;
   font-size: calc(0.8vh + 0.8vw);
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   transition: 0.3s;
   animation: riseLoad 2s ease 0s 1 normal backwards;
 }
@@ -80,7 +80,6 @@ div.bullet:hover {
 div.footer {
   position: absolute;
   bottom: 0;
-  margin-bottom: 10px;
   color: white;
   text-align: center;
   font-family: Poppins;
@@ -101,6 +100,18 @@ div.projectTitle {
 
 div.projectDetail {
   color: white;
+  cursor: default;
+  text-align: center;
+  font-family: Poppins;
+  font-size: calc(0.8vh + 0.8vw);
+  margin: 10px;
+  transition: 0.3s;
+  animation: riseLoad 1s ease 0s 1 normal backwards;
+}
+
+div.postDetail {
+  color: white;
+  text-shadow: 0 0 10px white;
   cursor: default;
   text-align: center;
   font-family: Poppins;
@@ -142,6 +153,8 @@ div.projectContainer {
   gap: 20px;
   padding: 20px;
   max-width: 100%;
+  transition: 0.3s;
+  animation: riseLoad 1.7s ease 0s 1 normal backwards;
 }
 
 button {
@@ -149,9 +162,9 @@ button {
   justify-content: center;
   align-items: center;
   width: 12vw;
-  height: 6vh;
+  height: 7vh;
   margin: 10px 0;
-  padding: 0;
+  padding: 10px;
   background-color: var(--generalTextColor);
   border: 0;
   border-radius: 30px;
