--- a/hackathons/fuseLearn/calculator/calculator.css
+++ b/hackathons/fuseLearn/calculator/calculator.css
@@ -12,7 +12,7 @@ body {
   height: 100%;
   margin: 0;
   overflow: hidden;
-  background-color: var(--blueBG);
+  background: var(--blueBG);
 }
 
 p {
@@ -40,7 +40,7 @@ img.back {
   left: 20px;
   z-index: 4;
   cursor: pointer;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
+  animation: riseLoad 2s ease 0s 1 normal backwards;
 }
 
 div.blurBox {
@@ -51,7 +51,7 @@ div.blurBox {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 0, 0);
+  background: rgba(255, 0, 0, 0);
   backdrop-filter: blur(30px);
   z-index: 3;
 }
@@ -68,7 +68,7 @@ div.miniTextbox {
   border-radius: 30px;
   font-family: Helvetica;
   font-size: calc(1vw + 1.5vh);
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   color: white;
   overflow-y: hidden;
   text-overflow: ellipsis;
@@ -96,7 +96,7 @@ button {
   border-radius: 30px;
   font-family: Helvetica;
   font-size: calc(1vw + 1.5vh);
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   color: white;
   cursor: pointer;
   transition-duration: 0.4s;
@@ -105,18 +105,18 @@ button {
 }
 
 button:hover {
-  background-color: white;
+  background: white;
   color: black;
   box-shadow: 0 0 10px black;
   transform: perspective(200px) rotateY(5deg) rotateX(5deg);
 }
 
 button.special {
-  background-color: var(--vibrantBlueBG);
+  background: var(--vibrantBlueBG);
 }
 
 button.special:hover {
-  background-color: var(--turquoiseBG);
+  background: var(--turquoiseBG);
   box-shadow: 0 0 10px var(--turquoiseBG);
 }
 
@@ -153,7 +153,7 @@ div.horizontalCenter {
   height: 56vh;
   padding: 0;
   border-radius: 30px;
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   text-align: center;
   overflow-y: auto;
   animation: riseLoad 1s ease 0s 1 normal backwards;
@@ -189,7 +189,7 @@ ol li {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--scrollbarTrack);
+  background: var(--scrollbarTrack);
   border-radius: 30px;
 }
 
@@ -199,5 +199,5 @@ ol li {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--vibrantBlueBG);
+  background: var(--vibrantBlueBG);
 }
