--- a/hackathons/fuseLearn/launcher/launcher.css
+++ b/hackathons/fuseLearn/launcher/launcher.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
   margin: 0;
   overflow: hidden;
-  background-color: var(--blueBG);
+  background: var(--blueBG);
 }
 
 p {
@@ -50,7 +50,7 @@ p {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 0, 0);
+  background: rgba(255, 0, 0, 0);
   backdrop-filter: blur(30px);
   z-index: 3;
 }
@@ -68,7 +68,7 @@ button.textOnly {
   font-family: Helvetica;
   font-weight: bold;
   font-size: 20px;
-  background-color: transparent;
+  background: transparent;
   color: white;
   cursor: pointer;
 }
@@ -130,7 +130,7 @@ button.textOnly:hover {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--scrollbarTrack);
+  background: var(--scrollbarTrack);
   border-radius: 30px;
 }
 
@@ -140,5 +140,5 @@ button.textOnly:hover {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--vibrantBlueBG);
+  background: var(--vibrantBlueBG);
 }
