--- a/hackathons/fuseLearn/notepad/notepad.css
+++ b/hackathons/fuseLearn/notepad/notepad.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
   margin: 0;
   overflow: hidden;
-  background-color: var(--blueBG);
+  background: var(--blueBG);
 }
 
 p {
@@ -22,7 +22,7 @@ p {
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.bgIMG {
+img.bgIMG {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -31,9 +31,9 @@ p {
   z-index: 1;
 }
 
-.back {
-  width: 50px;
-  height: 50px;
+img.back {
+  width: 3.5vw;
+  height: 3.5vw;
   position: absolute;
   top: 20px;
   left: 20px;
@@ -42,7 +42,7 @@ p {
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.blurBox {
+div.blurBox {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@ p {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 0, 0);
+  background: rgba(255, 0, 0, 0);
   backdrop-filter: blur(30px);
   z-index: 3;
 }
@@ -68,7 +68,7 @@ button.textOnly {
   font-family: Helvetica;
   font-weight: bold;
   font-size: 20px;
-  background-color: transparent;
+  background: transparent;
   color: white;
   cursor: pointer;
 }
@@ -77,7 +77,7 @@ button.textOnly:hover {
   text-decoration: underline;
 }
 
-.title {
+div.title {
   color: white;
   margin: 60px 0;
   text-align: center;
@@ -87,12 +87,12 @@ button.textOnly:hover {
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.horizontalCenter {
+div.horizontalCenter {
   margin-left: auto;
   margin-right: auto;
 }
 
-.horizontalLayout {
+div.horizontalLayout {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -104,7 +104,7 @@ button.textOnly:hover {
   margin: 100px;
 }
 
-.verticalLayout {
+div.verticalLayout {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -117,7 +117,7 @@ button.textOnly:hover {
   margin: 100px;
 }
 
-.textbox {
+textarea.textbox {
   width: 80vw;
   height: 60vh;
   padding: 15px 15px 35px 15px;
@@ -125,14 +125,14 @@ button.textOnly:hover {
   border-radius: 30px 30px 0 0;
   font-family: Helvetica;
   font-size: 25px;
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   color: white;
   overflow-y: auto;
   outline: none;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
-.detailPane {
+div.detailPane {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -140,8 +140,9 @@ button.textOnly:hover {
   padding: 0 15px;
   border-top: solid;
   border-radius: 0 0 30px 30px;
-  background-color: var(--darkBG);
-  color: white;
+  background: var(--darkBG);
+  color: var(--scrollbarThumb);
+  margin-bottom: 20px;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
 
@@ -158,7 +159,7 @@ button.textOnly:hover {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--scrollbarTrack);
+  background: var(--scrollbarTrack);
   border-radius: 30px;
 }
 
@@ -168,5 +169,5 @@ button.textOnly:hover {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--vibrantBlueBG);
+  background: var(--vibrantBlueBG);
 }
