--- a/hackathons/fuseLearn/tasks/tasks.css
+++ b/hackathons/fuseLearn/tasks/tasks.css
@@ -15,7 +15,7 @@ body {
   height: 100%;
   margin: 0;
   overflow: hidden;
-  background-color: var(--blueBG);
+  background: var(--blueBG);
 }
 
 p {
@@ -23,7 +23,7 @@ p {
   margin: 0;
   text-align: center;
   font-family: Helvetica;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
+  animation: riseLoad 5s ease 0s 1 normal backwards;
 }
 
 img.bgIMG {
@@ -39,7 +39,7 @@ img.info {
   width: 6vw;
   height: 6vw;
   margin-bottom: 20px;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
+  animation: riseLoad 3s ease 0s 1 normal backwards;
 }
 
 img.back {
@@ -61,7 +61,7 @@ div.blurBox {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 0, 0);
+  background: rgba(255, 0, 0, 0);
   backdrop-filter: blur(30px);
   z-index: 3;
 }
@@ -78,7 +78,7 @@ button {
   border-radius: 30px;
   font-family: Helvetica;
   font-size: calc(0.625vw + 1.1vh);
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   transition-duration: 0.4s;
@@ -86,37 +86,37 @@ button {
 }
 
 button.add {
-  background-color: var(--greenBG);
+  background: var(--greenBG);
   color: white;
 }
 
 button.add:hover {
-  background-color: white;
+  background: white;
   color: var(--greenBG);
   box-shadow: 0 0 10px var(--greenBG);
   transform: perspective(200px) rotateY(5deg) rotateX(5deg);
 }
 
 button.clearCompleted {
-  background-color: var(--yellowBG);
+  background: var(--yellowBG);
   color: black;
   font-size: 15px;
 }
 
 button.clearCompleted:hover {
-  background-color: white;
+  background: white;
   color: var(--darkYellowBG);
   box-shadow: 0 0 10px var(--darkYellowBG);
   transform: perspective(200px) rotateY(5deg) rotateX(5deg);
 }
 
 button.empty {
-  background-color: var(--redBG);
+  background: var(--redBG);
   color: white;
 }
 
 button.empty:hover {
-  background-color: white;
+  background: white;
   color: var(--redBG);
   box-shadow: 0 0 10px var(--redBG);
   transform: perspective(200px) rotateY(5deg) rotateX(5deg);
@@ -161,7 +161,7 @@ input {
   text-align: center;
   border: none;
   border-radius: 40px;
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   font-family: Helvetica;
   font-size: 20px;
@@ -174,11 +174,11 @@ ol {
   height: 45vh;
   padding: 20px 5px 5px 40px;
   border-radius: 30px;
-  background-color: var(--darkBG);
+  background: var(--darkBG);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   overflow-x: hidden;
   overflow-y: auto;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
+  animation: riseLoad 4s ease 0s 1 normal backwards;
   list-style-type: decimal;
 }
 
@@ -187,7 +187,7 @@ ol li {
   padding: 5px;
   font-family: Helvetica;
   font-size: 20px;
-  animation: riseLoad 1s ease 0s 1 normal backwards;
+  animation: riseLoad 3s ease 0s 1 normal backwards;
   list-style: decimal inside;
 }
 
@@ -223,7 +223,7 @@ div.info {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--scrollbarTrack);
+  background: var(--scrollbarTrack);
   border-radius: 30px;
 }
 
@@ -233,5 +233,5 @@ div.info {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--vibrantBlueBG);
+  background: var(--vibrantBlueBG);
 }
