--- a/hackathons/fuseLearn/notepad/notepad.css
+++ b/hackathons/fuseLearn/notepad/notepad.css
@@ -2,6 +2,11 @@
   --blueBG: #4375b0;
   --vibrantBlueBG: #0077ff;
   --darkBG: #191e25;
+  --darkGradientBG: linear-gradient(
+    180deg,
+    rgba(44, 51, 61, 1) 0%,
+    rgba(25, 30, 37, 1) 75%
+  );
   --scrollbarTrack: rgb(25, 27, 38);
   --scrollbarThumb: #555;
 }
@@ -125,7 +130,7 @@ textarea.textbox {
   border-radius: 30px 30px 0 0;
   font-family: Helvetica;
   font-size: 25px;
-  background: var(--darkBG);
+  background: var(--darkGradientBG);
   color: white;
   overflow-y: auto;
   outline: none;
